--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "@mdi/font": "^4.9.95",
     "apexcharts": "^3.15.5",
     "axios": "^0.19.1",
+    "babel-preset-stage-2": "^6.24.1",
     "core-js": "^3.4.4",
     "easy-circular-progress": "^1.0.4",
+    "jwt-decode": "^2.2.0",
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.5.2",
-    "vue-router": "^3.1.3",
+    "vue-router": "^3.1.6",
     "vue-sweetalert-icons": "^4.2.0",
     "vue2-google-maps": "^0.10.7",
-    "vuetify": "^2.1.0"
+    "vuelidate": "^0.7.5",
+    "vuetify": "^2.1.0",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
