--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.5",
     "vuetify": "^2.1.0",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
